{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 99,
  "lineage": "24deb8fe-2d60-6f3f-7b64-413a446f5461",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:vpc/vpc-b3e006d8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-7e27c715",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-447f872f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-b3e006d8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3e52fd55",
            "owner_id": "042236406240",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:loadbalancer/pruebas-tf-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "pruebas-tf-elb-1599593743.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "pruebas-tf-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "pruebas-tf-elb",
            "security_groups": [
              "sg-048c5dbe7d35e5c79"
            ],
            "source_security_group": "042236406240/pruebas-tf-allow_http_anywhere",
            "source_security_group_id": "sg-048c5dbe7d35e5c79",
            "subnets": [
              "subnet-5a212f32",
              "subnet-7b13bf37",
              "subnet-7ea1e504"
            ],
            "tags": {
              "Name": "pruebas-tf-web-elb"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.allow_http_anywhere",
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-048c5dbe7d35e5c79",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048c5dbe7d35e5c79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pruebas-tf-allow_http_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pruebas-tf-allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-b3e006d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-0a72705ba085ee883",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a72705ba085ee883",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pruebas-tf-allow_ssh_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pruebas-tf-allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-b3e006d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}